// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return a nodemon configuration 1`] = `
"{
  "env": {
    "NODE_ENV": "development"
  },
  "exec": "./src/index.js",
  "ignore": [
    ".git",
    ".github",
    ".idea",
    ".vscode",
    "node_modules"
  ],
  "verbose": true,
  "watch": [
    "src"
  ]
}"
`;

exports[`should return a nodemon configuration for TypeScript 1`] = `
"{
  "env": {
    "NODE_ENV": "development"
  },
  "exec": "ts-node ./src/index.ts",
  "execMap": {
    "ts": "ts-node"
  },
  "ext": "ts",
  "ignore": [
    ".git",
    ".github",
    ".idea",
    ".vscode",
    "node_modules"
  ],
  "verbose": true,
  "watch": [
    "src"
  ]
}"
`;
